--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: php
     build: ./configs/php-fpm
     volumes:
-      - ./src:/application
+      - ./src:/opt/project
       - ./configs/php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
       - ./configs/php-fpm/xdebug.ini:/etc/php/7.4/mods-available/xdebug.ini
       - ./configs/php-fpm/logs:/var/log
