--- a/configs/php-fpm/xdebug.ini
+++ b/configs/php-fpm/xdebug.ini
@@ -2,7 +2,7 @@ zend_extension = /usr/local/lib/php/extensions/no-debug-non-zts-20190902/xdebug.
 xdebug.remote_autostart = 1
 xdebug.remote_enable = 1
 xdebug.remote_log="/var/log/xdebug.log"
-xdebug.remote_host=localhost:8000
+xdebug.remote_host=host.docker.internal
 xdebug.remote_handler=dbgp
 xdebug.remote_port=9000
 xdebug.remote_mode = req
